@@ -1,3 +1,9 @@
+Fri Jul 18 17:35:27 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * tools/excelRTD/RTDServerDLL.cpp:
+
+		Fixed build error for wide-char builds.
+
 Fri Jul 18 16:24:37 UTC 2014  Phillip LaBanca  <labancap@ociweb.com>
 
         * tests/DCPS/Instances/PubDriver.h:
